[package]
name = "rust_guard"
version = "0.1.0"
authors = ["embedded"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rust_guard"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
# Error & Logging
anyhow = "1.0.96"
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# Peripherals
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"

# Async
async-io = "2.4.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

[build-dependencies]
embuild = "0.33"
